objects/SLP_StatusReport__c.object
<CustomObject>
    <fields>
        <fullName>Excuted__c</fullName>
        <label>Excuted</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <label>Scenario</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tester_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SLP_StatusReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SLP_StatusReport</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLP_StatusReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>